--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     
 </head>
 <body>
-    <div class="wrapper">
-        <div class="grid-item1">1</div>
-        <div class="grid-item2">2</div>
-        <div class="grid-item3">3</div>
-        <div class="grid-item4">4</div>
-        <div class="grid-item5">5</div>
-        <div class="grid-item6">6</div>
-        <div class="grid-item7">7</div>
-        <div class="grid-item8">8</div>
-        <div class="grid-item9">9</div>
+    <div class="grid-container">
+        <div class="grid-item"><img src="https://source.unsplash.com/EFoH8YajQuA/"></div>
+        <div class="grid-item1"><img src="https://source.unsplash.com/kjDAwx5xUwA/"></div>
+        <div class="grid-item1"><img src="https://source.unsplash.com/PqIkfBur11Y/"></div>
+        <div class="grid-item1"><img src="https://source.unsplash.com/X5W4EmxYlGE/"></div>
+        <div class="grid-item1"><img src="https://source.unsplash.com/c0I4ahyGIkA/"></div>
+        <div class="grid-item1"><img src="https://source.unsplash.com/MWXKz_o1Ls0/"></div>
+        <div class="grid-item1"><img src="https://source.unsplash.com/_WTyLE5f-3o/"></div>
+        <div class="grid-item1"><img src="https://source.unsplash.com/ADoXxYW6UuQ/"></div>
+        <div class="grid-item1"><img src="https://source.unsplash.com/QUHV_SRIGAQ/"></div>
     </div>
+ 
 
 
 </body>
-</html>
+</html> 
