fix layout issue

--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
+
 <head>
     <title>CSS Grid</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700" rel="stylesheet">
-    <link media="all" type="text/css" rel="stylesheet" href="index.css">
-    
+    <link media="all" type="text/css" rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
     <div class="grid-container">
-        <div class="grid-item"><img src="https://source.unsplash.com/EFoH8YajQuA/"></div>
-        <div class="grid-item1"><img src="https://source.unsplash.com/kjDAwx5xUwA/"></div>
-        <div class="grid-item1"><img src="https://source.unsplash.com/PqIkfBur11Y/"></div>
-        <div class="grid-item1"><img src="https://source.unsplash.com/X5W4EmxYlGE/"></div>
-        <div class="grid-item1"><img src="https://source.unsplash.com/c0I4ahyGIkA/"></div>
-        <div class="grid-item1"><img src="https://source.unsplash.com/MWXKz_o1Ls0/"></div>
-        <div class="grid-item1"><img src="https://source.unsplash.com/_WTyLE5f-3o/"></div>
-        <div class="grid-item1"><img src="https://source.unsplash.com/ADoXxYW6UuQ/"></div>
-        <div class="grid-item1"><img src="https://source.unsplash.com/QUHV_SRIGAQ/"></div>
+        <div class="grid-item grid-item1">
+            <img src="https://source.unsplash.com/EFoH8YajQuA/">
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/kjDAwx5xUwA/">
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/PqIkfBur11Y/">
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/X5W4EmxYlGE/">
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/c0I4ahyGIkA/">
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/MWXKz_o1Ls0/">
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/_WTyLE5f-3o/">
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/ADoXxYW6UuQ/">
+        </div>
+        <div class="grid-item">
+            <img src="https://source.unsplash.com/QUHV_SRIGAQ/">
+        </div>
     </div>
- 
-
-
 </body>
-</html> 
+
+</html>
